--- a/Elmla3eb/ar.lproj/SearchVC.strings
+++ b/Elmla3eb/ar.lproj/SearchVC.strings
@@ -17,4 +17,4 @@
 /* Class = "UITextField"; placeholder = "Field Name"; ObjectID = "TeU-5s-sLS"; */
 "TeU-5s-sLS.placeholder" = "اسم الملعب";
 
-"oL3-TO-fXI.text" = "النطاق الزمني للحجز";
+"oL3-TO-fXI.text" = ":النطاق الزمني للحجز";
