--- a/Elmla3eb/ar.lproj/Main.strings
+++ b/Elmla3eb/ar.lproj/Main.strings
@@ -210,7 +210,7 @@
 
 
 //Profile
-"0x3-TC-Vwp.normalTitle" = "تغيير كلمه المرور"
+"0x3-TC-Vwp.normalTitle" = "تغيير كلمه المرور" ;
 "TfD-bt-qSD.normalTitle" = "تاكيد" ;
 
     //Change password
