--- a/Elmla3eb/ar.lproj/Main.strings
+++ b/Elmla3eb/ar.lproj/Main.strings
@@ -222,5 +222,8 @@
 "bqx-YN-Hpw.normalTitle" = "الغاء";
 "usb-ki-Hhf.normalTitle" = "تاكيد" ;
 
+
+//Splash SCreen
+"LRf-iY-k7c.normalTitle" = "تخطي";
 //@End Profile
 
