--- a/Elmla3eb/ar.lproj/Main.strings
+++ b/Elmla3eb/ar.lproj/Main.strings
@@ -212,7 +212,9 @@
 //Profile
 "0x3-TC-Vwp.normalTitle" = "تغيير كلمه المرور" ;
 "TfD-bt-qSD.normalTitle" = "تاكيد" ;
-
+"ZC1-T8-8Os.text" = "رقم الجوال";
+"XbG-BR-vK1.text" = "تاريخ الميلاد";
+"3JA-KK-f1g.text" = "سناب شات";
     //Change password
 "P82-ts-3q1.text" = "تغيير كلمه المرور" ;
 "mhI-NY-Wrf.text" = "كلمه المرور القديمه" ;
